[metadata]
name = issue_dependency_crawler
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bau.premium-minds.com/eos/epic-dependencies-crawler
author = Ricardo Jesus

[options]
packages = find:
python_requires = >= 3.6.0
install_requires =
    jira~=3.0.1
    dotenv~=0.19.2
    graphviz~=0.18
    setuptools~=58.2.0

[options.entry_points]
console_scripts =
    issue-dependency-crawler = epic_dependencies_crawler:main

[options.packages.find]
exclude =
    tests*
    testing*